--- a/Informacion/objetivos.html
+++ b/Informacion/objetivos.html
@@ -116,7 +116,7 @@ Finalmente, el sistema proyecta a la Argentina hacia un rol internacional, promo
                 </p>
             </a>
         </div>
-  <section id="sumate" class="space-y-6 pt-10 border-t border-cura-accent/20 w-full max-w-5xl mx-auto">
+<section id="sumate" class="space-y-6 pt-10 border-t border-cura-accent/20 w-full max-w-5xl mx-auto">
   <div class="max-w-2xl">
     <h2 class="text-xl md:text-2xl font-bold text-white mb-2">Quiero sumarme</h2>
     <p class="text-sm text-cura-accentLight">
@@ -124,19 +124,27 @@ Finalmente, el sistema proyecta a la Argentina hacia un rol internacional, promo
     </p>
   </div>
 
-  <div class="bg-cura-card border border-cura-accent/40 rounded-xl p-6 shadow-md max-w-4xl">
+  <div class="bg-cura-card border border-cura-accent/40 rounded-xl p-6 shadow-md max-w-4xl w-full">
     <p class="text-sm text-cura-accentLight mb-4">
       Centralizamos todas las adhesiones en un único formulario para asegurar mejor seguimiento,
       trazabilidad y actualización de tus datos.
     </p>
 
-    <a href="https://www.leycura.org/#sumate"
-       class="inline-flex items-center justify-center gap-2 px-4 py-2 rounded-md bg-white text-cura-primary text-sm font-semibold hover:bg-cura-accentLight hover:text-cura-primaryDark transition w-full sm:w-auto">
-      <span>Ir al formulario principal</span>
-      <span class="text-base">↗</span>
-    </a>
+    <div class="mt-4 w-full">
+      <a href="https://www.leycura.org/#sumate"
+         class="group relative inline-flex items-center justify-center gap-2 px-6 py-3 bg-cura-accent hover:bg-cura-accent/80 text-white font-medium text-sm md:text-base rounded-full transition-all duration-300 shadow-lg hover:shadow-cura-accent/25 hover:-translate-y-0.5 border border-white/10 w-full">
+        <span>Ir al formulario principal</span>
+        <svg xmlns="http://www.w3.org/2000/svg"
+             class="h-4 w-4 transition-transform group-hover:translate-x-1"
+             fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M14 5l7 7m0 0l-7 7m7-7H3" />
+        </svg>
+      </a>
+    </div>
   </div>
 </section>
+
 
 
   </main>
