--- a/Informacion/implementacion-tecnica.html
+++ b/Informacion/implementacion-tecnica.html
@@ -2,7 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="manifest" href="site.webmanifest">
   <title>Información | Ley C.U.R.A.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -227,9 +230,11 @@ document.addEventListener('DOMContentLoaded', function () {
           }
       });
   });
-
+}); // <-- cierre de DOMContentLoaded
+</script>
 
 
 </body>
+</html>
 </html>
 
