--- a/index.html
+++ b/index.html
@@ -493,11 +493,11 @@
       </div>
     </section>
 
-    <section class="space-y-4">
-      <div class="max-w-2xl">
-        <h2 class="text-lg md:text-xl font-bold text-white mb-1">MANTENTE CONECTADO</h2>
-        <p class="text-sm text-cura-accentLight">Obtené información sobre los avances de la ley y sobre cómo podés formar parte de esta historia.</p>
-      </div>
+<section class="space-y-4 mt-10 md:mt-12">
+  <div class="max-w-2xl">
+    <h2 class="text-lg md:text-xl font-bold text-white mb-1">MANTENTE CONECTADO</h2>
+    <p class="text-sm text-cura-accentLight">Obtené información sobre los avances de la ley y sobre cómo podés formar parte de esta historia.</p>
+  </div>
       <form id="newsletter-form" class="max-w-md flex flex-col sm:flex-row gap-2 w-full">
         <input name="email" type="email" required placeholder="Correo electrónico" class="flex-1 w-full border border-cura-accent/40 rounded-md px-3 py-2 text-sm text-cura-primary focus:outline-none focus:ring-1 focus:ring-cura-accent focus:border-cura-accent" />
         <button type="submit" class="w-full sm:w-auto px-4 py-2 rounded-md bg-white text-cura-primary text-sm font-semibold hover:bg-cura-accentLight hover:text-cura-primaryDark transition">OBTENER INFORMACIÓN</button>
