--- a/index.html
+++ b/index.html
@@ -988,6 +988,7 @@ if (sumateForm && sumateModal && sumateOkBtn) {
     if (e.target === sumateModal) cerrarSumateModal();
   });
 }
+//fin sumate
 
   
   // --- NEWSLETTER (ORIGINAL) ---
