--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 <section id="sumate" class="space-y-6">
   <div class="max-w-2xl">
     <h2 class="text-xl md:text-2xl font-bold text-white mb-2">Quiero sumarme</h2>
-    <p class="text-sm text-cura-accentLight">Completá tus datos para sumarte a la iniciativa.</p>
+    <p class="text-sm text-cura-accentLight">Necesitamos reunir firmas para que esto sea una realidad. Completá tus datos para sumarte a la iniciativa y formar parte de la historia.</p>
   </div>
 
   <form id="sumate-form"
