--- a/av.html
+++ b/av.html
@@ -65,4 +65,469 @@
       position: relative;
       background: linear-gradient(135deg, var(--blue-dark), var(--blue-main));
       color: #fff;
-      border-radius: 28px 28px
+      border-radius: 28px 28px 22px 22px;
+      padding: 16px 18px 24px;
+      overflow: hidden;
+      flex-shrink: 0;
+    }
+
+    .header::before {
+      content: "";
+      position: absolute;
+      width: 180%;
+      height: 180%;
+      border-radius: 50%;
+      background: radial-gradient(circle at top, rgba(255, 255, 255, 0.18), transparent 60%);
+      top: -70%;
+      left: -40%;
+      opacity: 0.9;
+    }
+
+    .header-row {
+      position: relative;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      z-index: 1;
+    }
+
+    .back-btn {
+      width: 30px;
+      height: 30px;
+      border-radius: var(--radius-pill);
+      border: 1px solid rgba(255, 255, 255, 0.6);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 18px;
+      cursor: pointer;
+      background: rgba(15, 23, 42, 0.18);
+      backdrop-filter: blur(10px);
+    }
+
+    .header-title {
+      font-size: 20px;
+      font-weight: 600;
+    }
+
+    /* Card principal */
+    .card {
+      margin-top: -18px;
+      background: #fff;
+      border-radius: 24px;
+      padding: 18px 18px 20px;
+      box-shadow: 0 10px 26px rgba(15, 23, 42, 0.15);
+      flex: 1;
+      overflow-y: auto;
+    }
+
+    .section {
+      margin-bottom: 14px;
+    }
+
+    .section-label {
+      font-size: 14px;
+      font-weight: 600;
+      margin-bottom: 6px;
+      color: var(--text-main);
+    }
+
+    .field-row {
+      display: flex;
+      gap: 8px;
+      flex-wrap: wrap;
+    }
+
+    .input-text,
+    .select-field {
+      width: 100%;
+      padding: 11px 12px;
+      border-radius: 12px;
+      border: 1px solid var(--border-soft);
+      font-size: 14px;
+      outline: none;
+      background: #f9fafb;
+      color: var(--text-main);
+      transition: border-color 0.15s, box-shadow 0.15s, background 0.15s;
+    }
+
+    .input-text:focus,
+    .select-field:focus {
+      border-color: var(--blue-main);
+      box-shadow: 0 0 0 1px rgba(37, 99, 235, 0.28);
+      background: #fff;
+    }
+
+    .input-text::placeholder {
+      color: var(--text-soft);
+    }
+
+    .pill-small {
+      padding: 9px 12px;
+      border-radius: 999px;
+      border: 1px solid var(--border-soft);
+      font-size: 13px;
+      background: #f9fafb;
+      color: var(--text-soft);
+      cursor: pointer;
+      white-space: nowrap;
+    }
+
+    /* Radios tipo de atención */
+    .radio-group {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px 16px;
+      font-size: 14px;
+    }
+
+    .radio-option {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      cursor: pointer;
+    }
+
+    .radio-option input {
+      accent-color: var(--blue-main);
+    }
+
+    /* Fila doble */
+    .row-2 {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+
+    .row-2 .section {
+      flex: 1 1 0;
+      margin-bottom: 0;
+    }
+
+    /* Pills horario */
+    .pill-group {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+    }
+
+    .pill {
+      padding: 8px 14px;
+      border-radius: var(--radius-pill);
+      border: 1px solid var(--border-soft);
+      font-size: 13px;
+      background: #f9fafb;
+      color: var(--text-soft);
+      cursor: pointer;
+      white-space: nowrap;
+      transition: all 0.15s;
+    }
+
+    .pill.active {
+      background: var(--blue-soft);
+      border-color: var(--blue-main);
+      color: var(--blue-dark);
+      font-weight: 500;
+    }
+
+    .hint {
+      font-size: 12px;
+      color: var(--text-soft);
+      margin-top: 4px;
+    }
+
+    .suggestion-link {
+      display: block;
+      margin-top: 6px;
+      font-size: 13px;
+      color: #2563eb;
+      text-decoration: underline;
+      cursor: pointer;
+    }
+
+    .chip {
+      display: inline-flex;
+      align-items: center;
+      padding: 4px 8px;
+      border-radius: var(--radius-pill);
+      background: #e5f0ff;
+      color: var(--blue-dark);
+      font-size: 11px;
+      margin-top: 6px;
+    }
+
+    /* Toggle */
+    .toggle-row {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-top: 4px;
+    }
+
+    .toggle {
+      position: relative;
+      width: 44px;
+      height: 24px;
+    }
+
+    .toggle input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      inset: 0;
+      background-color: #d1d5db;
+      border-radius: 999px;
+      transition: 0.2s;
+    }
+
+    .slider::before {
+      content: "";
+      position: absolute;
+      height: 18px;
+      width: 18px;
+      left: 3px;
+      top: 3px;
+      background-color: #fff;
+      border-radius: 50%;
+      transition: 0.2s;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
+    }
+
+    .toggle input:checked + .slider {
+      background-color: var(--blue-main);
+    }
+
+    .toggle input:checked + .slider::before {
+      transform: translateX(18px);
+    }
+
+    /* Doc bar */
+    .doc-bar {
+      margin-top: 12px;
+      padding: 9px 10px;
+      border-radius: 12px;
+      background: #eef3ff;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      font-size: 12px;
+      color: var(--blue-dark);
+    }
+
+    .doc-indicator {
+      width: 20px;
+      height: 20px;
+      border-radius: 999px;
+      border: 1px solid var(--blue-main);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 12px;
+    }
+
+    /* Botón */
+    .button-primary {
+      margin-top: 16px;
+      width: 100%;
+      padding: 13px 16px;
+      border-radius: var(--radius-pill);
+      border: none;
+      background: linear-gradient(135deg, #2563eb, #1d4ed8);
+      color: #fff;
+      font-size: 15px;
+      font-weight: 600;
+      cursor: pointer;
+      box-shadow: 0 10px 22px rgba(37, 99, 235, 0.45);
+    }
+  </style>
+</head>
+<body>
+  <div class="phone">
+    <div class="app-shell">
+      <header class="header">
+        <div class="header-row">
+          <div class="back-btn">‹</div>
+          <div class="header-title">Solicitar Turno</div>
+        </div>
+      </header>
+
+      <main class="card">
+        <!-- Establecimiento -->
+        <section class="section">
+          <div class="section-label">Establecimiento</div>
+          <div class="field-row">
+            <input
+              type="text"
+              class="input-text"
+              placeholder="Buscar centro de salud"
+            />
+            <button class="pill-small" type="button">Usar ubicación actual</button>
+          </div>
+        </section>
+
+        <!-- Tipo de atención -->
+        <section class="section">
+          <div class="section-label">Tipo de atención</div>
+          <div class="radio-group">
+            <label class="radio-option">
+              <input type="radio" name="tipo" value="consulta" />
+              <span>Consulta general</span>
+            </label>
+            <label class="radio-option">
+              <input type="radio" name="tipo" value="laboratorio" checked />
+              <span>Laboratorio / estudios</span>
+            </label>
+            <label class="radio-option">
+              <input type="radio" name="tipo" value="especialista" />
+              <span>Especialista</span>
+            </label>
+          </div>
+        </section>
+
+        <!-- Especialidad -->
+        <section class="section">
+          <div class="section-label">Especialidad</div>
+          <select class="select-field" id="especialidad">
+            <option value="">Seleccionar especialidad</option>
+            <option value="clinica">Clínica médica</option>
+            <option value="cardiologia" selected>Cardiología</option>
+            <option value="traumatologia">Traumatología</option>
+            <option value="salud_mental">Salud mental</option>
+            <option value="ginecologia">Ginecología / Obstetricia</option>
+            <option value="neurologia">Neurología</option>
+            <option value="endocrinologia">Endocrinología</option>
+          </select>
+        </section>
+
+        <!-- Motivo -->
+        <section class="section">
+          <div class="section-label">Motivo del turno</div>
+          <input
+            id="motivo"
+            type="text"
+            class="input-text"
+            value="dolor en el pecho"
+          />
+          <span id="sugerencia-link" class="suggestion-link">
+            Posible consulta cardiológica
+          </span>
+          <div id="chip" class="chip">Estudios recomendados: ECG</div>
+        </section>
+
+        <!-- Obra social -->
+        <section class="section">
+          <div class="section-label">Obra social / cobertura</div>
+          <select class="select-field" id="cobertura">
+            <option value="">Seleccionar cobertura</option>
+            <option value="publica">Sin cobertura / Sistema público</option>
+            <option value="pami">PAMI</option>
+            <option value="ioma">IOMA</option>
+            <option value="osde" selected>OSDE</option>
+            <option value="swiss">Swiss Medical</option>
+            <option value="galeno">Galeno</option>
+          </select>
+        </section>
+
+        <!-- Profesional / Fecha -->
+        <section class="section row-2">
+          <div class="section">
+            <div class="section-label">Profesional (opcional)</div>
+            <select class="select-field">
+              <option>Me da lo mismo</option>
+              <option>Dra. Pérez</option>
+              <option>Dr. González</option>
+            </select>
+          </div>
+          <div class="section">
+            <div class="section-label">Fecha</div>
+            <input type="date" class="input-text" value="2024-12-04" />
+          </div>
+        </section>
+
+        <!-- Modalidad -->
+        <section class="section">
+          <div class="section-label">Modalidad</div>
+          <div class="radio-group">
+            <label class="radio-option">
+              <input type="radio" name="modalidad" value="presencial" checked />
+              <span>Presencial</span>
+            </label>
+            <label class="radio-option">
+              <input type="radio" name="modalidad" value="telemedicina" />
+              <span>Telemedicina</span>
+            </label>
+          </div>
+        </section>
+
+        <!-- Horario -->
+        <section class="section">
+          <div class="section-label">Horario</div>
+          <div class="pill-group" id="pillHorario">
+            <button class="pill active" data-horario="manana">Mañana</button>
+            <button class="pill" data-horario="tarde">Tarde</button>
+            <button class="pill" data-horario="cualquiera">Cualquier horario</button>
+          </div>
+        </section>
+
+        <!-- Autorización -->
+        <section class="section">
+          <div class="toggle-row">
+            <label class="toggle">
+              <input type="checkbox" checked />
+              <span class="slider"></span>
+            </label>
+            <div class="hint" style="font-size: 12px; line-height: 1.4;">
+              Autorizo compartir mi información esencial con el centro elegido para
+              gestionar este turno, según la Ley C.U.R.A.
+            </div>
+          </div>
+        </section>
+
+        <!-- Documentación -->
+        <section class="section">
+          <div class="doc-bar" id="docBar">
+            <div class="doc-indicator">i</div>
+            <div id="docText">
+              Traer laboratorio reciente (últimos 3 meses).
+            </div>
+          </div>
+        </section>
+
+        <button class="button-primary" type="button">
+          Solicitar turno
+        </button>
+      </main>
+    </div>
+  </div>
+
+  <script>
+    // comportamiento pills horario
+    const pillGroup = document.getElementById("pillHorario");
+    pillGroup.querySelectorAll(".pill").forEach((pill) => {
+      pill.addEventListener("click", () => {
+        pillGroup.querySelectorAll(".pill").forEach((p) => p.classList.remove("active"));
+        pill.classList.add("active");
+      });
+    });
+
+    // si cambias el motivo, ajustar sugerencias mínimas
+    const motivoInput = document.getElementById("motivo");
+    const docText = document.getElementById("docText");
+    motivoInput.addEventListener("input", () => {
+      const v = motivoInput.value.toLowerCase();
+      if (v.includes("pecho")) {
+        docText.textContent =
+          "Traer laboratorio reciente y estudios cardiológicos previos (si los tenés).";
+      } else {
+        docText.textContent =
+          "Traer estudios o informes relacionados con el motivo del turno.";
+      }
+    });
+  </script>
+</body>
+</html>
