--- a/av2.html
+++ b/av2.html
@@ -2,80 +2,499 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Solicitar Turno - C.U.R.A.</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Historia de Salud - C.U.R.A.</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
       --blue-dark: #0d3662;
-      --blue-main: #2563eb;
-      --blue-soft: #e5f0ff;
-      --bg-page: #dbeafe;
-      --text-main: #111827;
+      --blue-main: #1f6fe5;
+      --blue-soft: #e3f0ff;
+      --bg-light: #f3f6fb;
+      --text-main: #0f172a;
       --text-soft: #6b7280;
       --border-soft: #e5e7eb;
+      --radius-lg: 24px;
+      --radius-pill: 999px;
     }
 
     * {
       box-sizing: border-box;
-      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Text",
-        system-ui, sans-serif;
-      margin: 0;
-      padding: 0;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "SF Pro Text",
+        "Helvetica Neue", Arial, sans-serif;
     }
 
     body {
-      background: radial-gradient(circle at top, #e0edff 0, #edf2ff 40%, #e5ecff 100%);
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(180deg, #cfe3ff 0%, #f4f6fb 50%, #f4f6fb 100%);
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
       min-height: 100vh;
+    }
+
+    .app-shell {
+      width: 100%;
+      max-width: 430px;
+      min-height: 100vh;
+      padding: 14px 14px 24px;
+    }
+
+    /* HEADER */
+
+    .header {
+      position: relative;
+      background: linear-gradient(135deg, var(--blue-dark), var(--blue-main));
+      color: #fff;
+      border-radius: 28px;
+      padding: 16px 18px 32px;
+      overflow: hidden;
+      box-shadow: 0 14px 32px rgba(15, 23, 42, 0.45);
+    }
+
+    .header::before {
+      content: "";
+      position: absolute;
+      width: 180%;
+      height: 180%;
+      border-radius: 50%;
+      background: radial-gradient(circle at top, rgba(255, 255, 255, 0.18), transparent 60%);
+      top: -70%;
+      left: -40%;
+      opacity: 0.9;
+    }
+
+    .header-row {
+      position: relative;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      z-index: 1;
+    }
+
+    .back-btn {
+      width: 30px;
+      height: 30px;
+      border-radius: var(--radius-pill);
+      border: 1px solid rgba(255, 255, 255, 0.6);
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 16px;
+      font-size: 18px;
+      cursor: pointer;
+      background: rgba(15, 23, 42, 0.18);
+      backdrop-filter: blur(10px);
     }
 
-    /* Marco tipo iPhone */
-    .phone-frame {
-      width: 390px;
-      max-width: 100%;
-      border-radius: 42px;
-      background: #000;
-      padding: 10px;
-      box-shadow: 0 18px 40px rgba(15, 23, 42, 0.45);
+    .header-title {
+      font-size: 20px;
+      font-weight: 600;
     }
 
-    .screen {
-      border-radius: 32px;
-      overflow: hidden;
-      background: #eff4ff;
-      min-height: 720px;
-      position: relative;
+    /* CARD PRINCIPAL */
+
+    .card {
+      margin-top: -18px;
+      background: #ffffff;
+      border-radius: var(--radius-lg);
+      padding: 18px 18px 20px;
+      box-shadow: 0 12px 30px rgba(15, 23, 42, 0.14);
     }
 
-    /* Notch simple */
-    .notch {
-      position: absolute;
-      top: 8px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 140px;
-      height: 26px;
-      background: #000;
-      border-radius: 999px;
-      z-index: 10;
+    .section {
+      margin-bottom: 18px;
     }
 
-    .status-row {
-      position: relative;
-      z-index: 11;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 10px 18px 0;
-      color: #fff;
+    .section-label {
+      font-size: 14px;
+      font-weight: 600;
+      margin-bottom: 6px;
+      color: var(--text-main);
+    }
+
+    .hint {
       font-size: 12px;
+      color: var(--text-soft);
     }
 
-    /* Header azul con medialuna */
-    .header {
+    /* TABS */
+
+    .tabs {
+      display: flex;
+      gap: 8px;
+      padding: 4px;
+      background: #f3f4f6;
+      border-radius: 999px;
+      margin-bottom: 14px;
+    }
+
+    .tab {
+      flex: 1;
+      text-align: center;
+      padding: 7px 10px;
+      font-size: 13px;
+      border-radius: var(--radius-pill);
+      cursor: pointer;
+      color: var(--text-soft);
+      transition: all 0.15s;
+      white-space: nowrap;
+    }
+
+    .tab.active {
+      background: #ffffff;
+      color: var(--blue-dark);
+      font-weight: 600;
+      box-shadow: 0 3px 10px rgba(15, 23, 42, 0.12);
+    }
+
+    /* CHIPS */
+
+    .chip-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 6px;
+      margin-top: 8px;
+    }
+
+    .chip {
+      font-size: 11px;
+      padding: 4px 8px;
+      border-radius: var(--radius-pill);
+      background: #f1f5f9;
+      color: var(--text-main);
+    }
+
+    .chip-blue {
+      background: var(--blue-soft);
+      color: var(--blue-dark);
+    }
+
+    .chip-red {
+      background: #fee2e2;
+      color: #b91c1c;
+    }
+
+    /* TIMELINE */
+
+    .timeline {
       position: relative;
-      background: linear-gradient(135deg, #1d4ed8, #2563eb);
-      height
+      margin-top: 6px;
+      padding-left: 14px;
+    }
+
+    .timeline::before {
+      content: "";
+      position: absolute;
+      top: 4px;
+      left: 5px;
+      bottom: 8px;
+      width: 2px;
+      background: #e5e7eb;
+    }
+
+    .timeline-item {
+      position: relative;
+      padding-left: 12px;
+      margin-bottom: 14px;
+    }
+
+    .timeline-dot {
+      position: absolute;
+      left: -2px;
+      top: 4px;
+      width: 10px;
+      height: 10px;
+      border-radius: 999px;
+      background: #ffffff;
+      border: 2px solid var(--blue-main);
+    }
+
+    .timeline-title {
+      font-size: 13px;
+      font-weight: 600;
+      margin-bottom: 2px;
+      color: var(--text-main);
+    }
+
+    .timeline-sub {
+      font-size: 12px;
+      color: var(--text-soft);
+      margin-bottom: 4px;
+    }
+
+    .timeline-text {
+      font-size: 12px;
+      color: var(--text-main);
+      margin-bottom: 6px;
+    }
+
+    /* DOCS Y ACCESOS */
+
+    .doc-card {
+      padding: 10px 12px;
+      border-radius: 14px;
+      border: 1px solid var(--border-soft);
+      background: #f9fafb;
+      font-size: 12px;
+      margin-bottom: 10px;
+    }
+
+    .doc-name {
+      font-weight: 600;
+      margin-bottom: 2px;
+    }
+
+    .doc-meta {
+      color: var(--text-soft);
+      margin-bottom: 4px;
+    }
+
+    .doc-actions {
+      display: flex;
+      gap: 6px;
+      flex-wrap: wrap;
+    }
+
+    .pill-btn {
+      padding: 5px 10px;
+      border-radius: var(--radius-pill);
+      border: 1px solid var(--border-soft);
+      background: #ffffff;
+      font-size: 11px;
+      cursor: pointer;
+    }
+
+    /* BOTÓN PRINCIPAL */
+
+    .button-primary {
+      margin-top: 6px;
+      width: 100%;
+      padding: 12px 16px;
+      border-radius: var(--radius-pill);
+      border: none;
+      background: linear-gradient(135deg, #2563eb, #1d4ed8);
+      color: #ffffff;
+      font-size: 15px;
+      font-weight: 600;
+      cursor: pointer;
+      box-shadow: 0 10px 22px rgba(37, 99, 235, 0.4);
+    }
+
+    /* ESTADOS OCULTOS */
+
+    .view-panel {
+      display: none;
+    }
+
+    .view-panel.active {
+      display: block;
+    }
+  </style>
+</head>
+<body>
+  <div class="app-shell">
+    <header class="header">
+      <div class="header-row">
+        <div class="back-btn">‹</div>
+        <div class="header-title">Historia de Salud</div>
+      </div>
+    </header>
+
+    <main class="card">
+      <!-- TABS -->
+      <div class="tabs">
+        <div class="tab active" data-view="resumen">Resumen</div>
+        <div class="tab" data-view="cronologia">Cronología</div>
+        <div class="tab" data-view="documentos">Documentos</div>
+        <div class="tab" data-view="accesos">Accesos</div>
+      </div>
+
+      <!-- RESUMEN -->
+      <section id="view-resumen" class="view-panel active">
+        <div class="section">
+          <div class="section-label">Información esencial</div>
+          <div class="hint">
+            Estos datos se muestran primero en situaciones de atención habitual o de
+            emergencia, según la Ley C.U.R.A.
+          </div>
+
+          <div class="chip-row">
+            <span class="chip chip-blue">Grupo sanguíneo: 0+</span>
+            <span class="chip chip-blue">Alergia: Penicilina</span>
+            <span class="chip">Hipertensión arterial</span>
+            <span class="chip">Diabetes tipo 2</span>
+            <span class="chip">Metformina 850 mg</span>
+            <span class="chip-red">Datos sensibles configurables 🔒</span>
+          </div>
+        </div>
+
+        <div class="section">
+          <div class="section-label">Últimos eventos</div>
+          <div class="timeline">
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-title">12/04/2024 · Consulta ambulatoria</div>
+              <div class="timeline-sub">
+                Hospital General · Dr. Juan González (Clínica médica)
+              </div>
+              <div class="timeline-text">
+                Dolor torácico inespecífico. Se indican estudios cardiológicos.
+              </div>
+            </div>
+
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-title">03/03/2024 · Laboratorio</div>
+              <div class="timeline-sub">
+                Laboratorio Central · Glucemia, perfil lipídico
+              </div>
+              <div class="timeline-text">
+                Resultados con leve descompensación metabólica. En seguimiento.
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <button class="button-primary" type="button">
+          Ver historia médica completa
+        </button>
+      </section>
+
+      <!-- CRONOLOGÍA -->
+      <section id="view-cronologia" class="view-panel">
+        <div class="section">
+          <div class="section-label">Línea de tiempo</div>
+          <div class="hint">
+            Todos los registros interoperables cargados por hospitales, clínicas,
+            laboratorios y obras sociales adheridos a C.U.R.A.
+          </div>
+
+          <div class="timeline">
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-title">12/04/2024 · Consulta ambulatoria</div>
+              <div class="timeline-sub">
+                Hospital General · Consulta programada
+              </div>
+              <div class="timeline-text">
+                Dolor en el pecho de 3 días de evolución. ECG sin cambios agudos.
+              </div>
+              <div class="chip-row">
+                <span class="chip">Control</span>
+                <span class="chip chip-blue">Cardiología</span>
+              </div>
+            </div>
+
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-title">18/02/2024 · Guardia</div>
+              <div class="timeline-sub">
+                Hospital General · Atención por guardia
+              </div>
+              <div class="timeline-text">
+                Crisis de angustia. Registro clasificado como <strong>salud mental</strong>.
+              </div>
+              <div class="chip-row">
+                <span class="chip chip-red">Salud mental · oculto 🔒</span>
+                <span class="chip">Break-glass en emergencia</span>
+              </div>
+            </div>
+
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-title">03/03/2024 · Laboratorio</div>
+              <div class="timeline-sub">
+                Laboratorio Central · Glucemia, HbA1c, perfil lipídico
+              </div>
+              <div class="chip-row">
+                <span class="chip">Diabetes</span>
+                <span class="chip">Seguimiento crónico</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- DOCUMENTOS -->
+      <section id="view-documentos" class="view-panel">
+        <div class="section">
+          <div class="section-label">Estudios y documentos</div>
+          <div class="hint">
+            Informes, imágenes y resultados asociados a tu historia, en formato
+            interoperable HL7-FHIR.
+          </div>
+
+          <div class="doc-card">
+            <div class="doc-name">ECG · 12 derivaciones</div>
+            <div class="doc-meta">12/04/2024 · Hospital General</div>
+            <div class="doc-actions">
+              <button class="pill-btn">Ver</button>
+              <button class="pill-btn">Descargar</button>
+              <button class="pill-btn">Compartir enlace seguro</button>
+            </div>
+          </div>
+
+          <div class="doc-card">
+            <div class="doc-name">Informe de laboratorio completo</div>
+            <div class="doc-meta">03/03/2024 · Laboratorio Central</div>
+            <div class="doc-actions">
+              <button class="pill-btn">Ver</button>
+              <button class="pill-btn">Descargar</button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- ACCESOS -->
+      <section id="view-accesos" class="view-panel">
+        <div class="section">
+          <div class="section-label">Registro de accesos</div>
+          <div class="hint">
+            Cada vez que alguien consulta tu historia a través de C.U.R.A. queda
+            registrado aquí.
+          </div>
+
+          <div class="doc-card">
+            <div class="doc-name">12/04/2024 · Acceso profesional</div>
+            <div class="doc-meta">
+              Dr. Juan González · Hospital General · Consulta programada
+            </div>
+          </div>
+
+          <div class="doc-card">
+            <div class="doc-name">18/02/2024 · Acceso de emergencia</div>
+            <div class="doc-meta">
+              Guardia Hospital General · Break-glass por urgencia
+            </div>
+            <div class="doc-actions">
+              <button class="pill-btn">Reportar acceso sospechoso</button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </div>
+
+  <script>
+    const tabs = document.querySelectorAll(".tab");
+    const views = {
+      resumen: document.getElementById("view-resumen"),
+      cronologia: document.getElementById("view-cronologia"),
+      documentos: document.getElementById("view-documentos"),
+      accesos: document.getElementById("view-accesos"),
+    };
+
+    tabs.forEach((tab) => {
+      tab.addEventListener("click", () => {
+        tabs.forEach((t) => t.classList.remove("active"));
+        tab.classList.add("active");
+
+        const view = tab.dataset.view;
+        Object.keys(views).forEach((k) => {
+          views[k].classList.toggle("active", k === view);
+        });
+      });
+    });
+  </script>
+</body>
+</html>
