--- a/historia-salud.html
+++ b/historia-salud.html
@@ -439,9 +439,11 @@
           </div>
         </div>
 
-        <button class="button-primary" type="button">
-          Ver Historia Clínica Completa
-        </button>
+    <button class="button-primary" type="button"
+        onclick="window.location.href='historia-clinica-completa.html'">
+  Ver Historia Clínica Completa
+</button>
+
       </section>
 
       <!-- CRONOLOGÍA -->
